# wav2letter

./: .clang-format  .gitignore  .project  .pydevproject  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Decode.cpp  Dockerfile-CPU  Dockerfile-CPU-Base  Dockerfile-CPU-test  Dockerfile-CUDA  Dockerfile-CUDA-Base  Dockerfile-CUDA-test  Dockerfile-Inference  Dockerfile-Inference-Base  LICENSE  LiveDecode.cpp  PATENTS  README.md  TARGETS  Test.cpp  Train.cpp  decode.lua  plot.lua  test-one-file.lua  test.lua  train.lua
bindings/python/: CMakeLists.txt  README.md  get-pip.py  setup.py
bindings/python/examples/: criterion_example.py  decoder_example.py  feature_example.py
bindings/python/wav2letter/: __init__.py  _common.cpp  _criterion.cpp  _decoder.cpp  _feature.cpp  common.py  criterion.py  criterion_torch.py  decoder.py  feature.py
gtn/: CMakeLists.txt  GTN.c  GTN.h  GTNBuffer.c  GTNBuffer.h  GTNIterator.c  GTNIterator.h  GTNLogAdd.c  GTNLogAdd.h  GTNMax.c  GTNMax.h  cdefs.lua  env.lua  errmsg.lua  gtn.lua  init.lua  iterator.lua
gtn/rocks/: gtn-scm-1.rockspec
gtn/test/: test.lua
inference/: CMakeLists.txt  README.md
inference/cmake/: Buildcereal.cmake
inference/inference/common/: CMakeLists.txt  DataType.cpp  DataType.h  DefaultMemoryManager.cpp  DefaultMemoryManager.h  Functions.cpp  Functions.h  IOBuffer.cpp  IOBuffer.h  MemoryManager.h  common.h
inference/inference/decoder/: Decoder.cpp  Decoder.h
inference/inference/examples/: AudioToWords.cpp  AudioToWords.h  CMakeLists.txt  InteractiveStreamingASRExample.cpp  MultithreadedStreamingASRExample.cpp  SimpleStreamingASRExample.cpp  Util.cpp  Util.h
inference/inference/module/: InferenceModule.cpp  InferenceModule.h  ModuleParameter.cpp  ModuleParameter.h  ModuleProcessingState.cpp  ModuleProcessingState.h  module.h
speech/: CMakeLists.txt  ceplifter.lua  dct.lua  derivatives.lua  fftw.lua  init.c  init.lua  mfcc.lua  mfsc.lua  pow.lua  preemphasis.lua  proc.lua  trifiltering.lua  windowing.lua
speech/cmake/: FindFFTW.cmake
speech/generic/: derivatives.c  fftw.c
speech/profiling/: profiling.lua
speech/rocks/: speech-scm-1.rockspec
speech/test/: get_mfsc.py  sa1_wav_mfcc_octave  test.lua
src/common/: CMakeLists.txt  Defines.cpp  Defines.h  Dictionary.cpp  Dictionary.h  FlashlightUtils.cpp  FlashlightUtils.h  Transforms.cpp  Transforms.h  Utils-base.cpp  Utils-base.h  Utils-inl.h  Utils.cpp  Utils.h
src/common/test/: DictionaryTest.cpp  ProducerConsumerQueueTest.cpp  W2lCommonTest.cpp  test.dict
src/criterion/: AutoSegmentationCriterion.h  CMakeLists.txt  ConnectionistTemporalClassificationCriterion.cpp  ConnectionistTemporalClassificationCriterion.h  ConnectionistTemporalCriterion.cpp  ConnectionistTemporalCriterion.h  CriterionUtils.cpp  CriterionUtils.h  Defines.h  ForceAlignmentCriterion.cpp  ForceAlignmentCriterion.h  FullConnectionCriterion.cpp  FullConnectionCriterion.h  LinearSegmentationCriterion.h  Seq2SeqCriterion.cpp  Seq2SeqCriterion.h  SequenceCriterion.h  TransformerCriterion.cpp  TransformerCriterion.h  criterion.h
src/criterion/attention/: AttentionBase.h  ContentAttention.cpp  ContentAttention.h  Defines.h  LocationAttention.cpp  LocationAttention.h  MedianWindow.cpp  (+12 more)
src/data/: CMakeLists.txt  FeatureTransforms.cpp  FeatureTransforms.h  Featurize.cpp  Featurize.h  HDF5Data.cpp  HDF5Data.h  ListFileDataset.cpp  ListFileDataset.h  NumberedFilesLoader.cpp  NumberedFilesLoader.h  Sound.cpp  Sound.h  Utils.cpp  Utils.h  W2lBlobsDataset.cpp  W2lBlobsDataset.h  W2lDataset.cpp  W2lDataset.h  W2lDirectDataset.cpp  W2lDirectDataset.h  W2lListFilesDataset.cpp  W2lListFilesDataset.h  W2lNumberedFilesDataset.cpp  W2lNumberedFilesDataset.h
src/decoder/: CMakeLists.txt  Decoder.cpp  Decoder.h  Decoder.hpp  KenLM.cpp  KenLM.h  KenLM.hpp  LM.h  LM.hpp  LexiconDecoder.cpp  LexiconDecoder.h  LexiconFreeDecoder.cpp  LexiconFreeDecoder.h  Seq2SeqDecoder.cpp  Seq2SeqDecoder.h  TokenLMDecoder.cpp  TokenLMDecoder.h  Trie.cpp  Trie.h  Trie.hpp  Utils.cpp  Utils.h  Utils.hpp  WordLMDecoder.cpp  WordLMDecoder.h  WordLMDecoder.hpp
src/feature/: CMakeLists.txt  Ceplifter.cpp  Ceplifter.h  Dct.cpp  Dct.h  Derivatives.cpp  Derivatives.h  Dither.cpp  Dither.h  FeatureParams.h  Mfcc.cpp  Mfcc.h  Mfsc.cpp  Mfsc.h  PowerSpectrum.cpp  PowerSpectrum.h  PreEmphasis.cpp  PreEmphasis.h  Sound.cpp  Sound.h  SpeechUtils.cpp  SpeechUtils.h  TriFilterbank.cpp  TriFilterbank.h  Windowing.cpp  Windowing.h
src/libraries/: CMakeLists.txt
src/lm/: CMakeLists.txt  ConvLM.cpp  ConvLM.h  KenLM.cpp  KenLM.h
src/module/: CMakeLists.txt  ConvLmModule.cpp  ConvLmModule.h  Residual.cpp  Residual.h  SpecAugment.cpp  SpecAugment.h  TDSBlock.cpp  TDSBlock.h  W2lModule.cpp  W2lModule.h  module.h
src/runtime/: CMakeLists.txt  Data.cpp  Data.h  Distributed.cpp  Distributed.h  Helpers.cpp  Helpers.h  Logger.cpp  Logger.h  Optimizer.cpp  Optimizer.h  Serial.cpp  Serial.h  SpeechStatMeter.cpp  SpeechStatMeter.h  runtime.h
src/tests/: CMakeLists.txt
tools/: CMakeLists.txt  README.md  StreamingTDSModelConverter.cpp  StreamingTDSModelConverterVadModel.cpp  TDSModelConverter.cpp  VoiceActivityDetection-CTC.cpp
tools/alignment/: Align.cpp  README.md  Utils.h  convertToAudacityLabels.py
torchnet/sequential/: CMakeLists.txt  init.lua
wav2letter/beamer/: CMakeLists.txt  decoder.lua  env.lua  env.sh  init.lua  lm.lua  trie.lua
wav2letter/wav2letter/: CMakeLists.txt  autosegcriterion.lua  batchautosegcriterionc.lua  batchcriterion.lua  connectionisttemporalcriterion.lua  crossentropyforcealigncriterion.lua  dataparalleltabletable.lua  decodercriterion.lua  editdistancemeter.lua  forcealigncriterion.lua  forcealigncriterionc.lua  forcealigngarbagecriterion.lua  frameerrormeter.lua  fullconnectcriterion.lua  fullconnectcriterionc.lua  fullconnectgarbagecriterion.lua  init.lua  linearsegcriterion.lua  multistatefullconnectcriterion.lua  multithreadedbatchcriterion.lua  numberedfilesdataset.lua  optim.lua  readers.lua  shiftdataset.lua  shiftnet.lua  speechstatmeter.lua  timer.lua  transform.lua  viterbi.lua  zeronet.lua
(+1139 files in other folders)
